# gsoc_2025_pal

./: .gitignore  LICENSE  README.md
sensor_challenge/: README.md
sensor_challenge/DummySensorSystem/: CMakeLists.txt  DummySensorSystem.cc  DummySensorSystem.hh  README.md  demo_dummy.sdf
sensor_challenge/DummySensorSystem/DummySensor/: CMakeLists.txt  DummySensor.cc  DummySensor.hh  README.md
simulation_challenge/: CMakeLists.txt  README.md  package.xml
simulation_challenge/config/: ros_gz_bridge.yaml
simulation_challenge/launch/: robot_demo.launch.py
simulation_challenge/rviz/: vis.rviz
simulation_challenge/urdf/: orion_mod.urdf.xacro
simulation_challenge/worlds/: simple_world.sdf
